// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox> that renders a checkbox should render checkbox with complex children 1`] = `
<div>
  <div
    class="Checkbox"
  >
    <input
      class="Checkbox__input"
      id="c1"
      type="checkbox"
    />
    <label
      class="Checkbox__label"
      for="c1"
    >
      <span
        class="Checkbox__box"
      >
        <svg
          class="Checkbox__svg"
          height="8px"
          role="img"
          viewBox="0 0 12 9"
          width="12px"
        >
          <polyline
            points="1.5 5 4 8 10.5 2"
          />
        </svg>
      </span>
      <span>
        Check this out 
        <span>
          something else
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`<Checkbox> that renders a checkbox should render default checkbox correctly 1`] = `
<div>
  <div
    class="Checkbox"
  >
    <input
      class="Checkbox__input"
      id="c1"
      type="checkbox"
    />
    <label
      class="Checkbox__label"
      for="c1"
    >
      <span
        class="Checkbox__box"
      >
        <svg
          class="Checkbox__svg"
          height="8px"
          role="img"
          viewBox="0 0 12 9"
          width="12px"
        >
          <polyline
            points="1.5 5 4 8 10.5 2"
          />
        </svg>
      </span>
      <span
        class="Text--size_medium Checkbox__text"
      >
        Check this out
      </span>
    </label>
  </div>
</div>
`;

exports[`<Checkbox> that renders a checkbox should rendered disabled checkbox correctly 1`] = `
<div>
  <div
    class="Checkbox Checkbox--disabled"
  >
    <input
      class="Checkbox__input"
      disabled=""
      id="c3"
      type="checkbox"
    />
    <label
      class="Checkbox__label"
      for="c3"
    >
      <span
        class="Checkbox__box"
      >
        <svg
          class="Checkbox__svg"
          height="8px"
          role="img"
          viewBox="0 0 12 9"
          width="12px"
        >
          <polyline
            points="1.5 5 4 8 10.5 2"
          />
        </svg>
      </span>
      <span
        class="Text--context_neutral Text--size_medium Checkbox__text"
      >
        Useless checkbox
      </span>
    </label>
  </div>
</div>
`;

exports[`<Checkbox> that renders a checkbox svg render should not render any svg when checked and indeterminate are both false 1`] = `
<div>
  <div
    class="Checkbox"
  >
    <input
      checked=""
      class="Checkbox__input"
      id="c7"
      type="checkbox"
    />
    <label
      class="Checkbox__label"
      for="c7"
    >
      <span
        class="Checkbox__box"
      >
        <svg
          aria-label="polyline label"
          class="Checkbox__svg"
          height="8px"
          role="img"
          viewBox="0 0 12 9"
          width="12px"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`<Checkbox> that renders a checkbox svg render should render the checked svg when checked is true and indeterminate false 1`] = `
<div>
  <div
    class="Checkbox"
  >
    <input
      checked=""
      class="Checkbox__input"
      id="c5"
      type="checkbox"
    />
    <label
      class="Checkbox__label"
      for="c5"
    >
      <span
        class="Checkbox__box"
      >
        <svg
          aria-label="polyline label"
          class="Checkbox__svg"
          height="8px"
          role="img"
          viewBox="0 0 12 9"
          width="12px"
        >
          <polyline
            points="1.5 5 4 8 10.5 2"
            role="polyline label"
          />
        </svg>
      </span>
    </label>
  </div>
</div>
`;

exports[`<Checkbox> that renders a checkbox svg render should render the indeterminate svg when checked and indeterminate are true 1`] = `
<div>
  <div
    class="Checkbox"
  >
    <input
      checked=""
      class="Checkbox__input"
      id="c6"
      type="checkbox"
    />
    <label
      class="Checkbox__label"
      for="c6"
    >
      <span
        class="Checkbox__box"
      >
        <svg
          aria-label="line label"
          class="Checkbox__svg"
          height="8px"
          role="img"
          viewBox="0 0 12 9"
          width="12px"
        >
          <line
            role="line label"
            x1="3"
            x2="9"
            y1="5"
            y2="5"
          />
        </svg>
      </span>
    </label>
  </div>
</div>
`;

exports[`<Checkbox> that renders a checkbox svg render should render the indeterminate svg when checked is false and indeterminate true 1`] = `
<div>
  <div
    class="Checkbox"
  >
    <input
      checked=""
      class="Checkbox__input"
      id="c4"
      type="checkbox"
    />
    <label
      class="Checkbox__label"
      for="c4"
    >
      <span
        class="Checkbox__box"
      >
        <svg
          aria-label="line label"
          class="Checkbox__svg"
          height="8px"
          role="img"
          viewBox="0 0 12 9"
          width="12px"
        >
          <line
            role="line label"
            x1="3"
            x2="9"
            y1="5"
            y2="5"
          />
        </svg>
      </span>
    </label>
  </div>
</div>
`;
